--- a/index.html
+++ b/index.html
@@ -2,8 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="NextGen NFT Marketplace - Buy, Sell, and Trade Unique Digital Assets" />
+    <meta name="keywords" content="NFT, Marketplace, Digital Assets, Buy NFT, Sell NFT, Trade NFT, Crypto Art" />
+    <meta name="author" content="Anthony Chinaza Akachukwu" />
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="NextGen NFT Marketplace" />
+    <meta property="og:description" content="Discover, buy, and sell unique digital assets on the NextGen NFT Marketplace." />
+    <meta property="og:image" content="https://nextgen-nft-marketplace.netlify.app/images/nextgen-nft-marketplace.png" />
+    <meta property="og:url" content="https://nextgen-nft-marketplace.netlify.app" />
+    <meta property="og:type" content="website" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="NextGen NFT Marketplace" />
+    <meta name="twitter:description" content="Discover, buy, and sell unique digital assets on the NextGen NFT Marketplace." />
+    <meta name="twitter:image" content="https://nextgen-nft-marketplace.netlify.app/images/nextgen-nft-marketplace.png" />
+    
     <title>NextGen NFT Maketplace</title>
   </head>
   <body>
